--- a/POH5Data/POH5Data.csproj
+++ b/POH5Data/POH5Data.csproj
@@ -44,6 +44,7 @@
     <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToimittajaRepository.cs" />
+    <Compile Include="TuoteProxy.cs" />
     <Compile Include="TuoteRepository.cs" />
     <Compile Include="TuoteRyhmaRepository.cs" />
   </ItemGroup>
